Bug 35324 - FILEOPEN particular .docx: Watermark background picture shown in foreground
Summary: FILEOPEN particular .docx: Watermark background picture shown in foreground
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Ravindra Vidhate
URL:
Whiteboard: target:4.3.0
Keywords:
: 45667 58902 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-15 03:23 UTC by Dan Näsman
Modified: 2014-03-11 09:58 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Zipped both the original docx file and the odt file saved using MSOffice 2010 (52.64 KB, application/x-zip-compressed)
2011-03-15 03:23 UTC, Dan Näsman
Details
pdf export result of Original.docx (248.94 KB, application/pdf)
2011-03-15 22:45 UTC, Yifan Jiang
Details
Ziped both created on MS Word and opened with writter [Version 4.1.0.0.alpha0+] (1.86 MB, application/x-zip)
2013-01-02 07:38 UTC, vishakha.korade
Details
Watermark (background) picture shown before foreground picture in header (.docx) (131.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-06-08 09:27 UTC, Mikeyy - L10n HR
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Näsman 2011-03-15 03:23:07 UTC
Created attachment 44472 [details]
Zipped both the original docx file and the odt file saved using MSOffice 2010

I got a docx file that did not open correctly i LibreOffice (nor Goggle Docs). But I then opened the file with Microsoft Office 2010 and than saved it as an odt. Now this odt file could be opened correctly with LibreOffice.

I attach both the original docx file and the odt file saved using MSOffice 2010.

Regards, Dan
Comment 1 Yifan Jiang 2011-03-15 22:44:51 UTC
Reproduced in 3.3.1.

There are 2 ooxml import problems in the Original.docx:

1. The background picture is not regarded as a background but an individual image after importing

2. The picture in the footnote's alignment is not correct. It is expected on the right side of the footnote area (but stay in left side after importing).

Also I am attaching an MSO 2007 exported pdf from Original.docx.
Comment 2 Yifan Jiang 2011-03-15 22:45:34 UTC
Created attachment 44492 [details]
pdf export result of Original.docx
Comment 3 Yifan Jiang 2011-03-15 22:48:14 UTC
For Cedric's review.
Comment 4 TEH 2012-04-04 12:06:19 UTC
Using version 3.5.1 I have the same issue importing docx from Word 2007. Images that are in the middle of the document are moved to the front in LO.
Comment 5 Rainer Bielefeld Retired 2012-12-26 16:39:50 UTC
Only one issue per report!
<http://wiki.documentfoundation.org/BugReport#General_information> item 4

So I ignore the footer problem for now.

It seems that the original document uses a picture anchored to page heading as page background, still [Reproducible] with "LibreOffice 3.6.4.3" German UI/ German Locale [Build-ID: 2ef5aff] {pull date 2012-11-28} on German WIN7 Home Premium (64bit) 

Reassined due to facts!

@all:
Please use precise descriptions for the problem in summary and comments.It's really a mess to have to do lots of unzipping and tests simply to find out what the problem might be.

@Michael:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf
Comment 6 Rainer Bielefeld Retired 2012-12-31 15:20:26 UTC
*** Bug 58902 has been marked as a duplicate of this bug. ***
Comment 7 Rainer Bielefeld Retired 2012-12-31 15:22:08 UTC
All due to MAC OS in "Bug 58902 - Viewing particular .docx(MSo2007/2010):Watermark background picture hide text of foreground" and Comment 5
Comment 8 vishakha.korade 2013-01-02 07:38:22 UTC
Created attachment 72373 [details]
Ziped both created on MS Word and opened with writter [Version 4.1.0.0.alpha0+]

Reproducible bug on latest version 4.1.0.0.alpha0+
Comment 9 Rainer Bielefeld Retired 2013-01-25 22:21:09 UTC
@grakic@devbase.net
<http://wiki.documentfoundation.org/BugReport_Details#Version>
If you also did this mistake in other Bugs please undo your Version changes there!
Comment 10 Mikeyy - L10n HR 2013-06-08 09:27:59 UTC
Created attachment 80513 [details]
Watermark (background) picture shown before foreground picture in header (.docx)

I think this bug covers my bug also so I didn't open new.
Attached is test.docx which shows watermark (background) picture showing before foreground picture.

Tested it in 4.0.3.3 on windows 7 and it's bugged.
Comment 11 Thomas van der Meulen [retired] 2013-06-15 12:47:25 UTC
*** Bug 45667 has been marked as a duplicate of this bug. ***
Comment 12 Ravindra Vidhate 2014-02-27 06:42:59 UTC
The water mark problem exists for Text as well.

The submitted patch will fix both the problems.
Comment 13 Ravindra Vidhate 2014-02-27 06:47:22 UTC
The watermark problem exists while opening in LO and also exporting from LO.
Comment 14 Michael Stahl 2014-02-27 10:46:24 UTC
please note the Version field contains the oldest release that is affected by the bug (which is perhaps not so relevant for this bug bug important to track regressions properly)
Comment 15 Commit Notification 2014-03-11 09:58:19 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ff2f55d6f0a515c8c6e4186e124db28cc4056f5b

fdo#35324: Text and picture water are not imported  and not preserved in RT.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.