oox/source/export/vmlexport.cxx
@@ -175,7 +175,28 @@ void VMLExport::AddShape( sal_uInt32 nShapeType, sal_uInt32 nShapeFlags, sal_uIn
 {
     m_nShapeType = nShapeType;
     m_nShapeFlags = nShapeFlags;
-    m_pShapeAttrList->add( XML_id, ShapeIdString( nShapeId ) );
+    // If shape is a watermark object - should keep the original shape's name
+    // because Microsoft detects if it is a watermark by the actual name
+    if (!IsWaterMarkShape(m_pSdrObject->GetName()))
+    {
+        // Not a watermark object
+        m_pShapeAttrList->add( XML_id, ShapeIdString( nShapeId ) );
+    }
+    else
+    {
+        // A watermark object - store the optional shape ID also ('o:spid')
+        m_pShapeAttrList->add( XML_id, OUStringToOString(m_pSdrObject->GetName(), RTL_TEXTENCODING_UTF8) );
+    }
+}
+
+bool VMLExport::IsWaterMarkShape(const OUString& rStr)
+{
+     if (rStr.isEmpty() )  return false;
+
+     if (rStr.match(OUString("PowerPlusWaterMarkObject")) || rStr.match(OUString("WordPictureWatermark")))
+        return true;
+     else
+        return false;
 }
 
 static void impl_AddArrowHead( sax_fastparser::FastAttributeList *pAttrList, sal_Int32 nElement, sal_uInt32 nValue )
@@ -787,7 +808,9 @@ void VMLExport::Commit( EscherPropertyContainer& rProps, const Rectangle& rRect 
                     aStream.Seek(0);
                     OUString idStr = SvxMSDffManager::MSDFFReadZString(aStream, it->nPropSize, true);
                     aStream.Seek(0);
-                    m_pShapeAttrList->add(XML_ID, OUStringToOString(idStr, RTL_TEXTENCODING_UTF8));
+                    if (!IsWaterMarkShape(m_pSdrObject->GetName()))
+                         m_pShapeAttrList->add(XML_ID, OUStringToOString(idStr, RTL_TEXTENCODING_UTF8));
+
                     bAlreadyWritten[ESCHER_Prop_wzName] = true;
                 }
                 break;
