svx/source/svdraw/svdobj.cxx
@@ -439,6 +439,7 @@ SdrObject::SdrObject()
     ,mpSvxShape( NULL )
     ,maWeakUnoShape()
     ,mbDoNotInsertIntoPageAutomatically(false)
+    ,eWatermarkType(WATERMARK_TYPE_NONE)
 {
     bVirtObj         =false;
     bSnapRectDirty   =true;
@@ -787,6 +788,13 @@ void SdrObject::SetName(const OUString& rStr)
         SetChanged();
         BroadcastObjectChange();
     }
+
+    // Check if the shape's name contains one of these strings.
+    // If so - it is a watermark (That is how Microsoft Word detects watermarks, by their name)
+    if (rStr.match(OUString("PowerPlusWaterMarkObject")))
+        eWatermarkType = WATERMARK_TYPE_TEXT;
+    if (rStr.match(OUString("WordPictureWatermark")))
+        eWatermarkType = WATERMARK_TYPE_PICTURE;
 }
 
 OUString SdrObject::GetName() const
@@ -1115,6 +1123,8 @@ SdrObject& SdrObject::operator=(const SdrObject& rObj)
         pGrabBagItem=static_cast< SfxGrabBagItem* >( rObj.pGrabBagItem->Clone() );
 
     aGridOffset = rObj.aGridOffset;
+    eWatermarkType = rObj.eWatermarkType;
+//    msOptionalShapeId = rObj.msOptionalShapeId;
     return *this;
 }
 
