sw/source/filter/ww8/wrtw8nds.cxx
@@ -81,6 +81,7 @@
 #include <fmtrowsplt.hxx>
 #include <com/sun/star/i18n/ScriptType.hpp>
 #include <com/sun/star/i18n/WordType.hpp>
+#include <oox/export/vmlexport.hxx>
 
 #include <filter/msfilter/sprmids.hxx>
 
@@ -103,6 +104,7 @@ using namespace sw::util;
 using namespace sw::types;
 using namespace sw::mark;
 using namespace nsFieldFlags;
+using namespace ::oox::vml;
 
 static OUString lcl_getFieldCode( const IFieldmark* pFieldmark )
 {
@@ -518,6 +520,26 @@ void SwWW8AttrIter::OutAttr( sal_Int32 nSwPos, bool bRuby )
         m_rExport.AttrOutput().OutputItem( *pGrabBag );
 }
 
+bool SwWW8AttrIter::IsWatermarkFrame()
+{
+    if (maFlyFrms.size() != 1)
+        return false;
+
+    while ( maFlyIter != maFlyFrms.end() )
+    {
+        const SdrObject* pSdrObj = maFlyIter->GetFrmFmt().FindRealSdrObject();
+
+        if (pSdrObj)
+        {
+            if (VMLExport::IsWaterMarkShape(pSdrObj->GetName()))
+                  return true;
+        }
+        ++maFlyIter;
+    }
+
+    return false;
+}
+
 void SwWW8AttrIter::OutFlys(sal_Int32 nSwPos)
 {
     /*
@@ -533,7 +555,34 @@ void SwWW8AttrIter::OutFlys(sal_Int32 nSwPos)
         if ( nPos != nSwPos )
             break;
 
-        m_rExport.AttrOutput().OutputFlyFrame( *maFlyIter );
+        const SdrObject* pSdrObj = maFlyIter->GetFrmFmt().FindRealSdrObject();
+
+        if (pSdrObj)
+        {
+            if (VMLExport::IsWaterMarkShape(pSdrObj->GetName()))
+            {
+                 // This is a watermark object. Should be written ONLY in the header
+                 if(m_rExport.nTxtTyp == TXT_HDFT)
+                 {
+                       // Should write a watermark in the header
+                       m_rExport.AttrOutput().OutputFlyFrame( *maFlyIter );
+                 }
+                 else
+                 {
+                       // Should not write watermark object in the main body text
+                 }
+            }
+            else
+            {
+                 // This is not a watermark object - write normally
+                 m_rExport.AttrOutput().OutputFlyFrame( *maFlyIter );
+            }
+        }
+        else
+        {
+            // This is not a watermark object - write normally
+            m_rExport.AttrOutput().OutputFlyFrame( *maFlyIter );
+        }
         ++maFlyIter;
     }
 }
@@ -1904,6 +1953,13 @@ void MSWordExportBase::OutputTextNode( const SwTxtNode& rNode )
             bLastCR = true;
     }
 
+    // In order to make sure watermark is stored in 'header.xml', check nTxtTyp.
+    // if it is document.xml, don't write the tags (watermark should be only in the 'header')
+    SwWW8AttrIter aWatermarkAttrIter( *this, rNode );
+    if (( TXT_HDFT != nTxtTyp) && aWatermarkAttrIter.IsWatermarkFrame())
+    {
+       return;
+    }
 
     bool bFlyInTable = mpParentFrame && IsInTable();
 
